2006-06-24 Borut Razem <borut.razem AT siol.net>

	* sdcc/support/regression/tests/bitvars.c: added gbz80, pic16 and pic16
	  to the list of sdcc tagrets not supporting bit type
	* sdcc/support/regression/tests/bug-905992.c.c: excluded regression
	  testfor pic16 due to bug:
	  [ 1511794 ] pic16: regression test bug-895992.c fails

2006-06-24 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/mcs51/gen.c (genCmp): optimization for RFE 1162453
	* src/SDCCglue.c (initPointer), fixed bug 1496419
	* support/regression/tests/bug1496419.c: new, added

2006-06-22 Borut Razem <borut.razem AT siol.net>

	* support/regression/ports/pic16/support.c: use gpsim usart module from
	  libgpsim_modules library

2006-06-21 Jesus Calvino-Fraga <jesusc at ece.ubc.ca>

	* device/include/mcs51/at89c51ed2.h: Fixed bug 1510144 changed
	IP0H to IPH0.

2006-06-19 Raphael Neider <rneider AT web.de>

	* src/pic/glue.h,src/pic16/glue.h: added prototypes
	* src/pic/glue.c,src/pic16/glue.c (pic1x_stringInSet,
	  pic1x_emitSymbolIfNew): NEW, check for a string in a set,
	  (pic14printExterns,pic14printPublics,pic16printPublics,
	  pic16_printExterns): use new functions to emit symbols
	  (picglue,pic16glue): emit publics before emitting externs
	* src/pic/gen.c,src/pic16/gen.c (genFunction): remember the names of
	  locally defined functions to avoid bug #1443651
	* support/regression/tests/bug-716242.c: removed pic16 workaround
	* support/regression/ports/pic16/spec.mk: ignore errors during build

2006-06-19 Raphael Neider <rneider AT web.de>

	* src/pic/glue.h: added pic14aopLiteral prototype
	* src/pic/glue.c (pic14aopLiteral): return unsigned int
	* src/pic/gen.c: removed stdint.h dependency
	  (aopGet): use Safe_strdup()
	  (bitpatternFromVal): removed, replaced use with pic14aopLiteral
	  (genDataPointerSet): use pic14aopLiteral()
	* src/pic16/glue.h, src/pic16/glue.c, src/pic16/gen.c: similar changes
	  for pic16; thanks to Bernhard and Maarten
